# prodatum

./: .gitignore  CHANGELOG  CMakeLists.txt  Fl_Scope.C  README  README.md  cfg.C  cfg.H  config.h.in  data.C  data.H  debug.C  debug.H  fl_gleam.cxx  fltk_gleam-1.1.10.patch  images.H  midi.C  midi.H  pd.C  pd.H  prodatum.C  prodatum.desktop  prodatum.fl  pxk.C  pxk.H  ringbuffer.C  threads.H  widgets.C  widgets.H  windows.rc
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/: config.h.in
include/: Fl_Scope.h  cfg.h  data.h  debug.h  midi.h  pxk.h  ringbuffer.h  version.h
resources/: windows.rc
src/: Fl_Scope.cpp  cfg.c  cfg.cpp  data.c  data.cpp  debug.cpp  midi.c  midi.cpp  prodatum.cpp  pxk.c  pxk.cpp  ringbuffer.c  ringbuffer.cpp  version.cpp  widgets.cpp
